--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,24 +2,34 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
+$headerColor: #333;
 
 .App-header {
-  background-color: #555;
-  height: 150px;
-  padding: 20px;
+  background-color: $headerColor;
+  padding: 45px 20px 80px 20px;
   color: white;
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 2em;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
 }
 
-.App-intro {
-  font-size: large;
+.App-job {
+  font-size: 1.5em;
+  font-family: 'Montserrat', sans-serif;
+  // margin: 20px 0 0 0;
+  &-subtitle {
+    font-family: 'Montserrat', sans-serif;
+    a {
+      color: white;
+      text-decoration: none !important;
+    }
+  }
+}
+
+#skills {
 }
 
 @keyframes App-logo-spin {
