--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,4 +2,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: #f4f4f4;
+  font-family: 'Open Sans', sans-serif;
 }
