--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,5 +3,21 @@ body {
   padding: 0;
   font-family: sans-serif;
   background-color: #f4f4f4;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+}
+
+a:hover, a:active, a:visited {
+  text-decoration: none;
+}
+
+.color-primary {
+  color: #189E8C;
+}
+
+a.color-primary {
+  color: #189E8C;
+  &:hover {
+    color: #57C7B8;
+  }
 }
