update info section

--- a/src/components/Info/Info.scss
+++ b/src/components/Info/Info.scss
@@ -1,8 +1,6 @@
 .Info {
   .Info-content {
-    width: 50%;
-    display: inline-block;
-    padding: 40px 20px;
+    padding: 40px 0;
     text-align: left;
     &-title {
       font-size: 1.5em;
@@ -15,7 +13,5 @@
     }
   }
   .Info-picture {
-    width: 50%;
-    display: inline-block;
   }
 }
