--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,7 +3,7 @@ body {
   padding: 0;
   font-family: sans-serif;
   background-color: #f4f4f4;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 18px;
 }
 
@@ -16,7 +16,7 @@ a:hover, a:active, a:visited {
 }
 
 a.color-primary {
-  color: #189E8C;
+  color: #35B09F;
   &:hover {
     color: #57C7B8;
   }
