add my own image

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,55 +1,5 @@
+@import "styles/_variables.scss";
+
 .App {
   text-align: center;
-}
-
-$headerColor: #333;
-
-.App-header {
-  background-color: $headerColor;
-  $bgOpacity: 0.4;
-  background-image: linear-gradient( rgba(0, 0, 0, $bgOpacity), rgba(0, 0, 0, $bgOpacity) ), url(/images/cover.jpeg);
-  background-size: cover;
-  padding: 0 20px 90px 20px;
-  color: white;
-  .App-navbar {
-    margin-bottom: 70px;
-    margin-left: -20px;
-    margin-right: -20px;
-  }
-}
-
-.App-title {
-  font-size: 1.23em;
-  font-weight: 100;
-  font-family: 'Montserrat', sans-serif;
-}
-
-.App-job {
-  font-size: 3.1em;
-  font-weight: 900;
-  color: #57C7B8;
-  font-family: 'Montserrat', sans-serif;
-  // margin: 20px 0 0 0;
-  &-subtitle {
-    font-family: 'Montserrat', sans-serif;
-    padding: 6px 12px;
-    border: solid 1px #57C7B8;
-    display: inline-block;
-    margin: 8px auto;
-    &-middot {
-      color: #57C7B8;
-    }
-    a {
-      color: white;
-      text-decoration: none !important;
-    }
-  }
-}
-
-#skills {
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
