--- a/src/components/Info/Info.scss
+++ b/src/components/Info/Info.scss
@@ -1,7 +1,38 @@
+@import "styles/_variables.scss";
+
 .Info {
+  .Info-container {
+    display: flex;
+    flex-direction: row;
+    @media (max-width: $xs) {
+      flex-direction: column;
+    }
+  }
+  .Info-picture {
+    min-height: 200px;
+    width: 50%;
+    @media (max-width: $xs) {
+      width: calc(100% + 30px);
+      margin-left: -15px;
+      margin-right: -15px;
+    }
+    &-actual {
+      margin: 15px;
+      height: calc(100% - 30px);
+      border-radius: 10px;
+      overflow: hidden;
+      background-image: url(/images/me.jpg);
+      background-size: cover;
+      background-position: right;
+    }
+  }
   .Info-content {
-    padding: 40px 0;
+    padding: 30px 15px 30px 15px;
     text-align: left;
+    width: 50%;
+    @media (max-width: $xs) {
+      width: 100%;
+    }
     &-title {
       font-size: 1.5em;
       font-weight: 700;
@@ -11,7 +42,5 @@
       text-indent: 2em;
       text-align: justify;
     }
-  }
-  .Info-picture {
   }
 }
