--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,8 @@
-$color-main: #38FFFF;
+$color-main: #35B09F;
+$color-light: #57C7B8;
+$color-lighter: #88DFD3;
+$color-dark: #189E8C;
+$color-darker: #058271;
 
-$xs: 500px;
-$sm: 1024px;
+$xs: 768px;
+$sm: 992px;
