--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -35,6 +35,7 @@ $headerColor: #333;
     font-family: 'Montserrat', sans-serif;
     padding: 6px 12px;
     border: solid 1px #57C7B8;
+    // border-radius: 5px;
     display: inline-block;
     margin: 8px auto;
     &-middot {
