--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -17,6 +17,9 @@
   font-size: 1em;
   font-weight: 200;
   margin-bottom: 15px;
+  @media (max-width: $xs) {
+    font-size: .8em;
+  }
 }
 
 .Skills-wrap {
