--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,5 @@
+@import "styles/_variables.scss";
+
 body {
   margin: 0;
   padding: 0;
@@ -5,6 +7,9 @@ body {
   background-color: #f4f4f4;
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
+  @media (max-width: $xs) {
+    font-size: 14px;
+  }
 }
 
 a:hover, a:active, a:visited {
