--- a/src/components/Experiences/Experiences.scss
+++ b/src/components/Experiences/Experiences.scss
@@ -23,6 +23,14 @@
   color: #333;
   // text-align: left;
   display: inline-block;
+  .Experiences-set-company {
+    a {
+      color: $color-main;
+      &:hover {
+        color: $color-light;
+      }
+    }
+  }
   .Experiences-set-name {
     font-weight: bold;
   }
